--- a/Instagrid/Info.plist
+++ b/Instagrid/Info.plist
@@ -61,5 +61,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Delm-Medium.otf</string>
+	</array>
 </dict>
 </plist>
