--- a/Instagrid/Info.plist
+++ b/Instagrid/Info.plist
@@ -64,6 +64,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Delm-Medium.otf</string>
+		<string>ThirstySoftRegular.otf</string>
 	</array>
 </dict>
 </plist>
